fix(amplenote): collapse calendar section(s)

--- a/styles/amplenote/catppuccin.user.css
+++ b/styles/amplenote/catppuccin.user.css
@@ -166,15 +166,6 @@
       background-color: @surface0;
     }
 
-    .calendar-pane .fc .fc-timegrid-now-indicator-line {
-      border-color: @green;
-    }
-
-    .calendar-pane .fc .fc-timegrid .all-day-slot,
-    .calendar-pane .fc .fc-timegrid .fc-daygrid-day-events {
-      background-color: @base;
-    }
-
     .person-icon {
       background-color: @crust;
     }
@@ -206,6 +197,10 @@
 
       .fc-timegrid-now-indicator-line {
         border-color: darken(@accent-color, 10%);
+      }
+
+      .fc-timegrid .fc-daygrid-day-events {
+        background-color: @base;
       }
     }
 
